WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161876
URLParser: Correctly handle relative URLs that are just a scheme and a colon
https://bugs.webkit.org/show_bug.cgi?id=161876
Summary
URLParser: Correctly handle relative URLs that are just a scheme and a colon
Alex Christensen
Reported
2016-09-12 15:17:25 PDT
URLParser: Correctly handle relative URLs that are just a scheme and a colon
Attachments
Patch
(3.83 KB, patch)
2016-09-12 15:18 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2016-09-12 15:29 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-12 15:18:15 PDT
Created
attachment 288620
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-12 15:20:40 PDT
Attachment 288620
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2016-09-12 15:29:16 PDT
Created
attachment 288623
[details]
Patch
Alex Christensen
Comment 4
2016-09-12 15:38:32 PDT
http://trac.webkit.org/changeset/205833
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug