URLParser: Correctly handle relative URLs that are just a scheme and a colon https://bugs.webkit.org/show_bug.cgi?id=161876

Reviewed by Brady Eidson.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205833 268f45cc-cd09-0410-ab3c-d52691b4dbfc